<resources>
    <string name="app_name">English Island</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="Title">جزیره زبان منوچهرزاده</string>
    <string name="intro">معرفی آموزشگاه</string>
    <string name="news">اطلاعیه ها</string>
    <string name="clips">کلیپ ها</string>
    <string name="dls">دانلود ها</string>
    <string name="FAQ">سوالات متدوال</string>
    <string name="about">درباره توسعه دهنده</string>
    <string name="buy">خرید بسته آموزشی</string>
    <string name="session1">جلسه اول</string>
    <string name="session10">جلسه دهم</string>
    <string name="session2">جلسه دوم</string>
    <string name="session3">جلسه سوم</string>
    <string name="session4">جلسه چهارم</string>
    <string name="session5">جلسه پنجم</string>
    <string name="session6">جلسه ششم</string>
    <string name="session7">جلسه هفتم</string>
    <string name="session8">جلسه هشتم</string>
    <string name="session9">جلسه نهم</string>
    <string name="title_activity_main">English Island</string>
    <string name="key">MIHNMA0GCSqGSIb3DQEBAQUAA4G7ADCBtwKBrwC5bP75wVyj0bVeQctnWmcIPajfGQcg8Iq40v7xGFvFvlWsUr05YK1JNZnfiwMXezFN8kQfL7KesmppXcThoXJJQcv2JhGdBfWntxnB2Gi1efuo9yo1Vn76MhSIxpaxSC8zSbloDz7qW/btzWJ0KhJcK97rDB2ReMwqNQFVzykxOq4+jo3XmSOABPT9ZSfqauqEqB9308IOj+MEzUZtKv2xbTvNcwZ5+0saW1SYTD8CAwEAAQ==</string>
    <string name="videodl">دریافت فیلم جلسه</string>
    <string name="lesson1">Lesson one</string>
    <string name="open_notebook">open notebook</string>
    <string name="add_new_note">add new note</string>
    <string name="audiodl">دریافت صوت جلسه</string>
    <string name="description">descriptin</string>
    <string name="pro1">در حال بررسی...</string>
    <string name="megabyte">مگابایت</string>
    <string name="startingdl">در حال شروع دانلود...</string>
    <string name="retry">تلاش دوباره...</string>
    <string name="dling">در حال دانلود...</string>
    <string name="dlsuccess">دانلود با موفقیت انجام شد</string>
    <string name="dlfail">دانلود ناموفق، برای تلاش مجدد لمس کنید</string>
    <string name="gettingfile">در حال دریافت فایل</string>
    <string name="playvid">پخش فیلم جلسه</string>
    <string name="pdfdltxt">دریافت جزوه کلاس</string>
    <string name="kilobyte">کیلوبایت</string>
    <string name="enter">ورود به کلاس</string>
    <string name="notifications">اعلانات</string>


</resources>
