<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_intro"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/intro" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_clips"
            android:icon="@drawable/ic_videocam_black_24dp"
            android:title="@string/clips" />
        <item
            android:id="@+id/nav_dls"
            android:icon="@drawable/ic_get_app_black_24dp"
            android:title="@string/dls" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/buy" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/FAQ" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_code_black_24dp"
            android:title="@string/about" />
    </group>

</menu>
